Add user models and create sign up route

--- a/track-server/package.json
+++ b/track-server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "track-server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js",
@@ -16,5 +15,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
     "nodemon": "^2.0.22"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
